--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -10,4 +10,4 @@ highlight : hybrid
 logo : assets/image/logo.png
 transition : none
 published : true
-footnote : "GitPitch [ Aqua ] Presentation Template"
+footnote : "TokenUp"
